--- a/infotech/style.css
+++ b/infotech/style.css
@@ -54,9 +54,8 @@ gap: auto;
    display: none;
    background-color: #FFE3E8;
    flex-direction: column;
-   /* justify-content: center; */
-   /* align-items: center; */
-    height: 100vh;              /* full screen height */
+ 
+    height: 100vh;              
    width: 80%;
    position: absolute;
    top: 0;
@@ -69,18 +68,18 @@ gap: auto;
     z-index: 999;
 }
 .new-nav-bar {
-  /* margin-top: 1rem; */
+ 
   margin-bottom: 1.5rem;
   margin-right: 1rem;
-  display: flex;               /* items ek line me aayenge */
-  justify-content: space-between;/* image left, icon right */
-  align-items: center;          /* vertical center alignment */
+  display: flex;               
+  justify-content: space-between;
+  align-items: center;          
   padding: 10px 20px;
   background: #ffe7eb;
 }
 
 .mobile-nav {
-    display: none; /* desktop pe hide */
+    display: none; 
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -88,7 +87,7 @@ gap: auto;
    
 }
 
-/* Home icon styling */
+
 .mobile-home-icon i {
     font-size: 30px;
     cursor: pointer;
@@ -104,8 +103,6 @@ a{
 
 .btn{
     background-color: #FA1239;
-    /* width: 147px;
-    height: 46px; */
     border: 1px white;
     border-radius: 30px;
     box-shadow: 0px 0px 12px 0px rgba(250, 18, 57, 0.58);
@@ -115,12 +112,12 @@ a{
 }
 
 span i.fa-solid {
-    display: inline-block;  /* or block */
-    width: 40px;           /* apni desired width */
-    height: 40px;          /* apni desired height */
-    font-size: 30px;       /* icon ka size adjust karne ke liye */
-    text-align: center;    /* icon ko center align karne ke liye */
-    line-height: 40px;     /* icon ko vertical center karne ke liye */
+    display: inline-block;  
+    width: 40px;           
+    height: 40px;         
+    font-size: 30px;       
+    text-align: center;    
+    line-height: 40px;     
 }
 
 
@@ -210,8 +207,8 @@ span i.fa-solid {
 .cards{
      display: flex;
     justify-content: space-around;
-    align-items: stretch; /* makes all cards equal height */
-    flex-wrap: wrap; /* allows wrapping on small screens */
+    align-items: stretch; 
+    flex-wrap: wrap; 
     
     padding: 2rem 0;
 }
@@ -222,13 +219,13 @@ span i.fa-solid {
     align-items: center;
     justify-content: flex-start;
     gap: 12px;
-    width: 200px; /* fixed width for even layout */
+    width: 200px; 
     padding: 1.5rem;
     border: 1px solid #F0F0F0;
     border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05); /* light shadow for depth */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05); 
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    background-color: #fff; /* clean background */
+    background-color: #fff; 
     
 }
 .card-text{
@@ -267,7 +264,7 @@ span i.fa-solid {
 
 
 
-/* Tablets (<=1024px) */
+/* Tablets */
 @media (max-width:1024px) {
     .new-nav-container{
         display: none;
@@ -301,7 +298,7 @@ span i.fa-solid {
     margin: 0 2rem 0 2rem;
 }
 
-/* Mobile (<=768px) */
+/* Mobile  */
 @media (max-width: 768px){
 
    .nav-container {
